fix: remove the duplicate css
merge dark and light scrollbar css into one using the --border color var

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -231,12 +231,7 @@ input:-webkit-autofill:active {
 
   * {
     scrollbar-width: thin;
-    scrollbar-color: var(--color-neutral-200) transparent;
-  }
-
-  .dark * {
-    scrollbar-width: thin;
-    scrollbar-color: var(--color-neutral-800) transparent;
+    scrollbar-color: var(--border) transparent;
   }
 
   *::-webkit-scrollbar {
